--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="dogs.html">Dogs</a></li>
+                <li><a href="cats.html">Cats</a></li>
+                <li><a href="rabbits.html">Rabbits</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
