added 3 tabs for most fearded animals

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SITE_TITLE</title>
+    <title>The Most Feared and Missunderstood Animals</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,9 +11,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="dogs.html">Dogs</a></li>
-                <li><a href="cats.html">Cats</a></li>
-                <li><a href="rabbits.html">Rabbits</a></li>
+                <li><a href="snakes.html">Snakes</a></li>
+                <li><a href="spiders.html">Spiders</a></li>
+                <li><a href="sharks.html">sharks</a></li>
             </ul>
         </nav>
     </header>
