--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div class="site-title">Most Feared Animals In The World</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,11 +20,18 @@
     </header>
 
     <main>
+        <h1>Who are the most feared animals on earth?</h1>
+    
+        <figure>
+           <img src="images/3 most feared animals.jpg" alt="Spider, Shark, and snakes all in one piture">
 
-    </main>
+            <h3></h3>
+        </figure>
+       </main>
 
-    <footer>
-
-    </footer>
+   <footer>
+      <p>&copy; Copyright 2024 belogns to Brandy Sarmiento</p>
+   </footer>
+   <h1>What Animals Do You Fear?</h1>
 </body>
 </html>
